--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "vue-meta": "1.6.0",
     "vue-router": "3.0.6",
     "vuex": "3.1.0",
-    "bootstrap": "4.3.1"
+    "bootstrap": "4.3.1",
+    "vuelidate": "0.7.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "3.7.x",
